--- a/WebUI/Views/Shared/Components/CartSummary/Default.cshtml
+++ b/WebUI/Views/Shared/Components/CartSummary/Default.cshtml
@@ -33,6 +33,6 @@
     <li><hr class="dropdown-divider" /></li>
 
     <li>
-        <a class="dropdown-item" asp-controller="Cart" asp-action="List">Go to cart details</a>
+        <a class="dropdown-item" asp-controller="Cart" asp-action="List">Sepet Deteyları</a>
     </li>
 </ul>
