--- a/WebUI/Views/Product/Index.cshtml
+++ b/WebUI/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 
 <body>
     <div>
-    <table class="table table-responsive">
+        <table class="table table-striped">
         <tr>
          <td>Ürünler</td>
          <td>Ürün Fiyat</td>
