--- a/WebUI/Views/_AdminLayout.cshtml
+++ b/WebUI/Views/_AdminLayout.cshtml
@@ -20,7 +20,7 @@
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">ABC</a>
+            <a class="navbar-brand" href="#">ABC-ADMİN</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -32,11 +32,7 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link active" aria-current="page" href="#">Products Store</a>
                     </li>
                 </ul>
 
@@ -48,7 +44,7 @@
 
                         <span class="me-1">☰</span> Menü
                     </button>
-                    @await Component.InvokeAsync("CartSummary")
+                   
                    
                 </div>
 
@@ -60,10 +56,6 @@
  
     <div class="container-fluid mt-3">
         <div class="row">
-
-            <div class="col-md-2 bg-light p-3">
-                @await Component.InvokeAsync("CategoryList")
-            </div>
 
             <div class="col-md-10 p-3">
                 @if (TempData["message"] != null)
