--- a/WebUI/Views/_AdminLayout.cshtml
+++ b/WebUI/Views/_AdminLayout.cshtml
@@ -32,7 +32,7 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Products Store</a>
+                        <a class="nav-link active" asp-controller="Product" asp-action="Index">Products Store</a>
                     </li>
                 </ul>
 
@@ -42,8 +42,9 @@
                             type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false">
 
-                        <span class="me-1">☰</span> Menü
+                        <span class="me-1">☰</span> User
                     </button>
+                    @await Component.InvokeAsync("UserSummary")
                    
                    
                 </div>
