--- a/WebUI/Views/_Layout.cshtml
+++ b/WebUI/Views/_Layout.cshtml
@@ -36,7 +36,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" asp-controller="Account" asp-action="Login" >Admin</a>
                     </li>
                 </ul>
 
@@ -46,7 +46,7 @@
                             type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false">
 
-                        <span class="me-1">☰</span> Menü
+                        <span class="me-1">☰</span> Sepet
                     </button>
                     @await Component.InvokeAsync("CartSummary")
                    
